--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/3dv2.loader.js";
+      var loaderUrl = buildUrl + "/3dv3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/3dv2.data.gz",
-        frameworkUrl: buildUrl + "/3dv2.framework.js.gz",
-        codeUrl: buildUrl + "/3dv2.wasm.gz",
+        dataUrl: buildUrl + "/3dv3.data",
+        frameworkUrl: buildUrl + "/3dv3.framework.js",
+        codeUrl: buildUrl + "/3dv3.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ragdolltest",
