--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | ragdolltest</title>
+    <title>Unity WebGL Player | 3d-demo</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">ragdolltest</div>
+        <div id="unity-build-title">3d-demo</div>
       </div>
     </div>
     <script>
@@ -57,14 +57,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/3dv4.loader.js";
+      var loaderUrl = buildUrl + "/3dv5.loader.js";
       var config = {
-        dataUrl: buildUrl + "/3dv4.data",
-        frameworkUrl: buildUrl + "/3dv4.framework.js",
-        codeUrl: buildUrl + "/3dv4.wasm",
+        dataUrl: buildUrl + "/3dv5.data",
+        frameworkUrl: buildUrl + "/3dv5.framework.js",
+        codeUrl: buildUrl + "/3dv5.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "ragdolltest",
+        companyName: "ClusterGames",
+        productName: "3d-demo",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
