--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
         codeUrl: buildUrl + "/3dv5.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "ClusterGames",
-        productName: "3d-demo",
-        productVersion: "0.1.0",
-        showBanner: unityShowBanner,
+        productName: "ClusterGames-3d-demo",
+        productVersion: "0.1.0"
       };
 
       // By default, Unity keeps WebGL canvas render target size matched with
